# bspy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bspy.py  project.toml  pyproject.toml  repos.py
src/bspy/: bspy.py  project.py
